<?xml version="1.0"?>
<package format="2">
  <name>frontier_explorer</name>
  <version>0.0.0</version>
  <description>
    Frontier exploration.
  </description>

  <author email="ashwins@iitk.ac.in">Ashwin Shenai</author>
  <author email="gajendranagar02@gmail.com">Gajendra Nagar</author>

  <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>mav_planning_common</depend>
</package>
