<?xml version="1.0"?>
<package format="2">
  <name>global_planner</name>
  <version>0.0.0</version>
  <description>The global_planner package</description>

  <maintainer email="ashwin@todo.todo">ashwin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>voxblox_ros</depend>

</package>
