<?xml version="1.0"?>
<package format="2">
  <name>rviz_visualizer</name>
  <version>0.0.0</version>
  <description>
    Visualization functions for RViz.
  </description>

  <author email="ashwins@iitk.ac.in">Ashwin Shenai</author>

  <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
