<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>The simulator package</description>

  <maintainer email="dvyanshu@iitk.ac.in">Divyanshu Gangwar</maintainer>

  <license>TODO</license>

  <author email="dvyanshu@iitk.ac.in">Divyanshu Gangwar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  
</package>
