<?xml version="1.0"?>
<package format="2">
  <name>voxblox_global_planner</name>
  <version>0.0.0</version>
  <description>
    Global planning with voxblox skeletons.
  </description>

  <author email="ashwins@iitk.ac.in">Ashwin Shenai</author>
  <author email="gajendranagar02@gmail.com">Gajendra Nagar</author>

  <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mav_msgs</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>voxblox_planning_common</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_skeleton</depend>
  <depend>ariitk_planning_msgs</depend>

</package>
