<?xml version="1.0"?>
<package format="2">
  <name>voxblox_local_planner</name>
  <version>0.0.0</version>
  <description>
    Local planning with voxblox skeletons.
  </description>

  <author email="ashwins@iitk.ac.in">Ashwin Shenai</author>
  <author email="gajendranagar02@gmail.com">Gajendra Nagar</author>

  <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_skeleton</depend>
  <depend>voxblox_planning_common</depend>
  <depend>ariitk_planning_msgs</depend>
</package>
